fixed contrast on form with fb like

--- a/browser/style.less
+++ b/browser/style.less
@@ -234,7 +234,7 @@ div.css-form-wrap div.css-field p.css-title {
   height: 600px;
   padding: 1.5em;
   border-radius: 15px;
-  background-color: rgb(240,240,240);
+  background-color: #DDDDDD;
   margin-top: 5em;
 }
 .css-modal-form h2 {
